# 2015-periodi-3

./: .ahdoc.yml  .dir-locals.el  .travis.yml  CMakeLists.txt  LICENSE  README.md  divshot.json
cmake/Modules/: FindCheck.cmake
cmd/: CMakeLists.txt
cmd/src/: main.c
doc/: Makefile  implementation.md  specification.md  testing.md  usage.md  week1.md  week2.md  week3.md  week4.md  week5.md
example/: cond.tila  generator.tila  hello.tila  lists.tila  math.tila  recursion.tila  simple.tila  sub.tila
lib/: CMakeLists.txt
lib/include/: doc.hdoc  environment.h  macros.h  map.h  mapentry.h  node.h  parser.h  prefixparser.h  subparsers.h  tila.h  token.h  tokenizer.h  tokentype.h  util.h  vector.h
lib/include/datastructures/: map.h  vector.h
lib/include/interpreter/: argumentnode.h  assignnode.h  callnode.h  conditionalnode.h  environment.h  functionnode.h  gc.h  identifiernode.h  infixoperatornode.h  listaccessnode.h  listnode.h  node.h  numbernode.h  stringnode.h
lib/include/parser/: parser.h  subparsers.h
lib/include/tokenizer/: token.h  tokenizer.h  tokentype.h
lib/include/util/: macros.h
lib/src/: map.c  mapentry.c  node.c  parser.c  subparsers.c  token.c  tokenizer.c  tokentype.c  util.c  vector.c
lib/src/datastructures/: map.c  vector.c
lib/src/interpreter/: argumentnode.c  assignnode.c  callnode.c  conditionalnode.c  environment.c  functionnode.c  gc.c  identifiernode.c  infixoperatornode.c  listaccessnode.c  listnode.c  node.c  numbernode.c  stringnode.c
lib/src/parser/: parser.c  subparsers.c
lib/src/tokenizer/: tokenizer.c  tokentype.c
test/: CMakeLists.txt
test/include/: map_test.h  tilatest.h
test/src/: map.c  tilatest.c  tokenizer.c  util.c  vector.c
